Fix: path photo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-    <link rel="icon" type="image/png" href="imgs\Profile_centered.jpg">
+    <link rel="icon" type="image/png" href="imgs\profile_centered.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gonzalo Valero | Robotics & AI Engineer</title>
@@ -25,7 +25,7 @@
     <nav class="fixed w-full z-50 glass-card border-b border-slate-800">
         <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-3">
-                <img src="imgs\Profile_centered.jpg" alt="Gonzalo Valero" class="w-10 h-10 rounded-full object-cover border-2 border-blue-500/50">
+                <img src="imgs\profile_centered.jpg" alt="Gonzalo Valero" class="w-10 h-10 rounded-full object-cover border-2 border-blue-500/50">
                 <span class="text-xl font-bold gradient-text">Gonzalo Valero Domingo</span>
             </div>
             
